# eurofilter

./: CMakeLists.txt  README.md  main.cpp
filter/: CMakeLists.txt  euroFilter.cpp  euroFilter.h  filter.cpp  filter.h
